--- a/static/css/container/login-style.css
+++ b/static/css/container/login-style.css
@@ -134,7 +134,7 @@
 .vernum-btn{
 	float: right;
 	font-size: 14px;
-	color: #fff;
+	color: #000;
 	background: #5cbdaa;
 	border-radius: 30px;
 	padding: 10px 25px;
