--- a/templates/about.html
+++ b/templates/about.html
@@ -9,6 +9,16 @@
 </blockquote>
 <div class="container text-center">
     <h1>关于</h1>
+    <hr>
+    <button class="regist--ok">注册成功</button>
+    <hr>
+    <button class="regist--error">注册失败</button>
+    <hr>
+    <button class="login--ok">登录成功</button>
+    <hr>
+    <button class="login--error">登录失败</button>
+    <hr>
+    <button class="vercode">输入正确的验证码</button>
 </div>
 
 {% endblock %}
