--- a/static/css/header/header-style.css
+++ b/static/css/header/header-style.css
@@ -1,51 +1,7 @@
 *, *:after, *:before {
-  box-sizing: border-box;
-}
-
-.animenu__toggle {
-  display: none;
-  cursor: pointer;
-  background-color: #111;
-  border: 0;
-  padding: 10px;
-  height: 40px;
-  width: 40px;
-}
-.animenu__toggle:hover {
-  background-color: #0186ba;
-}
-
-.animenu__toggle__bar {
-  display: block;
-  width: 20px;
-  height: 2px;
-  background-color: #fff;
-  -webkit-transition:  0.15s cubic-bezier(0.75, -0.55, 0.25, 1.55); 
-  -o-transition:  0.15s cubic-bezier(0.75, -0.55, 0.25, 1.55); 
-  transition:  0.15s cubic-bezier(0.75, -0.55, 0.25, 1.55); 
-}
-.animenu__toggle__bar + .animenu__toggle__bar {
-  margin-top: 4px;
-}
-
-.animenu__toggle--active .animenu__toggle__bar {
-  margin: 0;
-  position: absolute;
-}
-.animenu__toggle--active .animenu__toggle__bar:nth-child(1) {
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-.animenu__toggle--active .animenu__toggle__bar:nth-child(2) {
-  opacity: 0;
-}
-.animenu__toggle--active .animenu__toggle__bar:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+	padding: 0px;
+	margin: 0px;
+  	box-sizing: border-box;
 }
 
 .animenu {
@@ -58,7 +14,7 @@
 }
 .animenu li, .animenu a {
   display: inline-block;
-  font-size: 15px;
+  font-size: 17px;
 }
 .animenu a {
   color: #aaaaaa;
@@ -137,10 +93,6 @@
 }
 
 @media screen and (max-width: 767px) {
-  .animenu__toggle {
-    display: inline-block;
-  }
-
   .animenu__nav,
   .animenu__nav__child {
     display: none;
@@ -195,10 +147,4 @@
     padding-left: 20px;
     width: 100%;
   }
-}
-.animenu__nav--open {
-  display: block !important;
-}
-.animenu__nav--open .animenu__nav__child {
-  display: block;
 }
