--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,29 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Flask</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/header-style.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/login-style.css" />
     <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/zzsc.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/header/header-style.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/footer/footer-style.css" />
+    <link rel="stylesheet" href="../static/css/overhang.min.css">
     <style>
-        body{
-            height:100%;background:gainsboro;overflow:hidden;
+        body {
+            height: 100%;
+            background: gainsboro;
+            overflow: hidden;
         }
-        html{
+
+        html {
             height: 100%;
         }
-        canvas{
-            z-index:-1;position:absolute;
+
+        canvas {
+            z-index: -1;
+            position: absolute;
         }
     </style>
     <script src="../static/js/jquery.js"></script>
-    <script src="../static/js/verificationNumbers.js" tppabs="js/verificationNumbers.js"></script>
-    <script src="../static/js/Particleground.js" tppabs="js/Particleground.js"></script>
+    <script src="../static/js/Particleground.js"></script>
+    <script src="../static/js/jquery-ui.min.js"></script>
+    <script src="../static/js/overhang.js"></script>
+    <script src="../static/js/index.js"></script>
     <script>
+        //内容中粒子背景特效属性修改在这！
         $(document).ready(function () {
             //粒子背景特效
             $('body').particleground({
@@ -73,22 +78,25 @@
                 <li>
                     <a target="_blank" href="http://sc.chinaz.com/jiaoben/">站长素材</a>
                 </li>
-                <li class="pull-right"></li>
                 {% if "user_email" in session %}
                 <!--如果传入名字-->
-                    <li class="pull-right">
-                        <a href="logout">退出</a>
-                    </li>
-                    <li class="pull-right">
-                        <a href="center" style="text-transform:none">{{ session.get("user_email") }}</a>
-                    </li>
+                <li class="pull-right">
+                    <a href="logout">退出</a>
+                </li>
+                <li class="pull-right">
+                    <a href="center">个人中心</a>
+                    <ul class="animenu__nav__child">
+                        <li><a href="center" style="text-transform:none">{{ session.get("user_email") }}</a></li>
+                        <li><a href="">修改账户</a></li>
+                    </ul>
+                </li>
                 {% else %}
-                    <li class="pull-right">
-                        <a href="regist">注册</a>
-                    </li>
-                    <li class="pull-right">
-                        <a href="login">登录</a>
-                    </li>
+                <li class="pull-right">
+                    <a href="regist">注册</a>
+                </li>
+                <li class="pull-right">
+                    <a href="login">登录</a>
+                </li>
                 {% endif %}
             </ul>
         </nav>
@@ -97,12 +105,35 @@
     {% block content %}
 
     {% endblock %}
-<br /><br /><br /><br /><br />
-<div class="modal-footer navbar-fixed-bottom">
-    <div class="text-center">
-        <footer style="font-size: 14px;">作者范茂伟，如有需要，请联系fmw666.github.io</footer>
+
+    <!--公共底部-->
+    <div class="footer">
+        <div class="footerinner">
+            <ul class="share">
+                <li>
+                    <img class="weibo_icon" src="../static/img/footer/share1.png" alt="">
+                </li>
+                <li>
+                    <img class="qq_icon" src="../static/img/footer/share2.png" alt="">
+                </li>
+                <li>
+                    <img class="twitter_icon" src="../static/img/footer/share3.png" alt="">
+                </li>
+                <li>
+                    <img class="wechat_icon" src="../static/img/footer/share4.png" alt="">
+                </li>
+            </ul>
+
+            <div class="footerinfo">
+                <div class="footerinfoTop">
+                    <p>本站作者范茂伟，此网站仅作学习交流使用，不带有任何商业目的，有任何问题请与作者联系。</p>
+                </div>
+                <div class="footerinfoBottom">
+                    <p>本人博客：<a href="http://fmw666.github.io/" target="_blank">fmw666.github.io</a></p>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
 </body>
 
 </html>
